<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303234"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="25dp">



        <LinearLayout
            android:id="@+id/master_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""

                android:textColor="@color/black"
                android:id="@+id/calendar"
                android:paddingStart="16dp"
                />

            <LinearLayout
                android:id="@+id/dropdown_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layoutOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/convertFromTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/convert_from"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/convertToTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/convert_in"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:id="@+id/spinner_from"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:id="@+id/spinner_to"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:id="@+id/linear_layout_01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:id="@+id/amount_to_convert_value_text"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="@string/sum_of_exchange"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="0dp"
                            android:id="@+id/conversion_rate_result_text_view"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="@string/exchange_rate"
                            android:textColor="@color/black"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/layout_fore">

                        <EditText
                            android:id="@+id/amount_to_convert_value_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="numberDecimal"
                            android:layout_weight="0.9"
                            android:text=""
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/conversion_rate_text"
                            android:layout_weight="1.0"
                            android:textColor="@color/black"
                            android:textSize="16sp"

                            />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/conversion_button"
                        android:text="@string/convert_btn"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        app:icon="@drawable/ic_baseline_autorenew_24"
                        android:textAllCaps="false"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>